--- a/app/assets/stylesheets/layout/_utilities.scss
+++ b/app/assets/stylesheets/layout/_utilities.scss
@@ -23,3 +23,26 @@
 .bg-dark-blue {
   background: #3b5998;
 }
+
+.list {
+  font-size: 15px;
+  font-weight: lighter;
+}
+
+a {
+  font-size: 25px;
+  color: white;
+  opacity: 0.9;
+}
+
+li {
+  list-style: none;
+}
+
+.title {
+    padding: 30px 0px 21px 0px;
+}
+
+.button {
+    padding: 30px 0px 21px 0px;
+}
