--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -7,8 +7,11 @@
     <div class="list text-center">
       <% @cocktail.doses.each do |dose| %>
       <li>
-      <%= dose.ingredient.name.capitalize %> -
-      <%= dose.description %>
+        <%= dose.ingredient.name.capitalize %> -
+        <%= dose.description %> |
+        <%= link_to "delete", dose_path(dose),
+        method: :delete,
+        data: { confirm: "Are you sure"}, class: "btn btn-danger btn-sm" %>
       </li>
       <% end %>
     </div>
