--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -2,9 +2,10 @@
   <div class="banner-content">
 
 
-  <div class="title">
-    <h2><%= @cocktail.name %></h2>
-  </div>
+    <div class="title">
+      <h2><%= @cocktail.name %></h2>
+      <%= cl_image_tag @cocktail.photo, height: 200 %>
+    </div>
     <h4>Indredients:</h4>
     <div class="list text-center">
       <% @cocktail.doses.each do |dose| %>
@@ -18,9 +19,9 @@
       <% end %>
     </div>
     <div class="button">
-    <%= link_to "Add dose", new_cocktail_dose_path(@cocktail), class: "btn btn-success" %>
+      <%= link_to "Add dose", new_cocktail_dose_path(@cocktail), class: "btn btn-success" %>
     </div>
-</div>
+  </div>
 </div>
 
 
