--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -3,8 +3,10 @@
 
     <h2>Create new cocktail</h2>
 
-    <%= simple_form_for [@cocktail] do |f| %>
+    <%= simple_form_for @cocktail do |f| %>
     <%= f.input :name %>
+    <%= f.input :photo %>
+    <%= f.input :photo_cache, as: :hidden %>
     <%= f.submit "Create", class: "btn btn-success"  %>
     <% end %>
 
