--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar-wagon">
   <!-- Logo -->
   <a href="/cocktails" class="navbar-wagon-brand">
-    <%=  image_tag 'logos.jpg' %>
+    <%=  image_tag 'download.jpeg' %>
   </a>
 
   <!-- Right Navigation -->
