--- a/app/assets/stylesheets/layout/_utilities.scss
+++ b/app/assets/stylesheets/layout/_utilities.scss
@@ -25,8 +25,12 @@
 }
 
 .list {
-  font-size: 15px;
-  font-weight: lighter;
+    font-size: 15px;
+    font-weight: lighter;
+    border: 1px solid #b1adad;
+    border-radius: 2px;
+    padding: 15px 0 0 15px;
+    margin: 11px 0px 11px 0;
 }
 
 a {
@@ -37,6 +41,7 @@ a {
 
 li {
   list-style: none;
+  padding: 10px 6px 10px 3px;
 }
 
 .title {
@@ -46,3 +51,5 @@ li {
 .button {
     padding: 30px 0px 21px 0px;
 }
+
+
