--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -3,18 +3,24 @@
     <div class="title">
       <h3 class="text-center">Cocktails</h3>
     </div>
-    <% @cocktails.each do |cocktail|  %>
-    <div class="list">
-      <%= link_to cocktail.name, cocktail_path(cocktail) %>
-      <%= cl_image_tag cocktail.photo, :height=>150, :crop=>"thumb" %>
-      <p>
-        <%= link_to "View", cocktail_path(cocktail), class: "btn btn-success btn-sm" %> |
-        <%= link_to "Remove", cocktail_path(cocktail), class: "btn btn-outline-success btn-sm",
-        method: :delete,
-        data: { confirm: "Are you sure?", } %>
-      </p>
+    <div class="container">
+      <div class="row text-center">
+        <% @cocktails.each do |cocktail|  %>
+        <div class="col-xs-12 col-sm-4">
+          <div class="list">
+            <%= link_to cocktail.name, cocktail_path(cocktail) %>
+            <%= cl_image_tag cocktail.photo, :height=>150, :crop=>"thumb" %>
+            <p>
+              <%= link_to "View", cocktail_path(cocktail), class: "btn btn-success btn-sm" %> |
+              <%= link_to "Remove", cocktail_path(cocktail), class: "btn btn-outline-success btn-sm",
+              method: :delete,
+              data: { confirm: "Are you sure?", } %>
+            </p>
+          </div>
+        </div>
+            <% end %>
+      </div>
     </div>
-    <% end %>
   </div>
 </div>
 
